# MPOR-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  libopencm3.ld  openocd.cfg
include/plane/: Logger.h  MainMotorTimer.h  ServoTimer.h  SysTick.h
src/: CMakeLists.txt  Logger.cpp  MainMotorTimer.cpp  NRF24.cpp  NRF24.h  ServoTimer.cpp  ServoTimer.h  SysTick.cpp  SysTick.h  main.cpp  printf.c
